executando chamada de api e mostrando em tela
