# app/Documentation/CompanyResponse.php
@@ -5,7 +5,7 @@ namespace App\Documentation;
 /**
  * @OA\Schema(
  *      title="Company Response",
- *      description="Data of company",
+ *      description="Dados da companhia.",
  *      type="object",
  * )
  */
@@ -13,18 +13,18 @@ class CompanyResponse
 {
     /**
      * @OA\Property(
-     *      title="Identificador",
-     *      description="Identificador do veículo",
+     *      title="Symbol",
+     *      description="Símbolo da empresa na bolsa de valores (ticket).",
      * )
      *
-     * @var integer
+     * @var string
      */
-    public $id;
+    public $symbol;
 
     /**
      * @OA\Property(
      *      title="Data da criação",
-     *      description="Data/Hora da criação do veículo",
+     *      description="Data/Hora da criação da companhia nesta base de dados.",
      *      format="datetime",
      * )
      *
@@ -35,11 +35,31 @@ class CompanyResponse
     /**
      * @OA\Property(
      *      title="Data da atualização",
-     *      description="Data/Hora de atualização do veículo.",
+     *      description="Data/Hora de atualização dos dados da companhia nesta base de dados.",
      *      format="datetime",
      * )
      *
      * @var string
      */
      public $updated_at;
+
+     /**
+     * @OA\Property(
+     *      title="companyName",
+     *      description="Nome da companhia na bolsa de valores.",
+     * )
+     *
+     * @var string
+     */
+    public $companyName;
+
+    /**
+     * @OA\Property(
+     *      title="description",
+     *      description="Descrição da companhia na bolsa de valores.",
+     * )
+     *
+     * @var string
+     */
+    public $description;
 }
